Some Grease Pencil operators cause segfaults when run from the console #94439

Closed
opened 2021-12-28 15:19:42 +01:00 by Fen · 4 comments

System Information
Operating system: macOS-12.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Pro Apple 4.1 Metal - 76.3

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: N/A

Short description of error
Several Grease Pencil operators can cause Blender to crash when run from the console, in various conditions.

This is not a high-priority problem, since this requires you to be poking around in the console, but it probably shouldn't crash anyway (:

Exact steps for others to reproduce the error
The following operators cause a segfault if run in Object Mode with nothing selected:

  • bpy.ops.gpencil.bake_mesh_animation

The following operators cause a segfault if run with a Grease Pencil object selected in Object Mode:

  • bpy.ops.gpencil.layer_change
  • bpy.ops.gpencil.segment_add
  • bpy.ops.gpencil.segment_move
  • bpy.ops.gpencil.segment_remove

You can try this out for yourself with the following file. Uncomment entries in bad_names to allow them to be executed by the script.

Grease Pencil.blend

In all cases, I ran the operator without any arguments. Thus, it used the default properties for each operator.

A debug/developer build reports null pointer dereferences for all cases, from what I've seen.

**System Information** Operating system: macOS-12.1-arm64-arm-64bit 64 Bits Graphics card: Apple `M1` Pro Apple 4.1 Metal - 76.3 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: N/A **Short description of error** Several Grease Pencil operators can cause Blender to crash when run from the console, in various conditions. This is *not* a high-priority problem, since this requires you to be poking around in the console, but it probably shouldn't crash anyway (: **Exact steps for others to reproduce the error** The following operators cause a segfault if run in Object Mode with nothing selected: * `bpy.ops.gpencil.bake_mesh_animation` The following operators cause a segfault if run with a Grease Pencil object selected in Object Mode: * `bpy.ops.gpencil.layer_change` * `bpy.ops.gpencil.segment_add` * `bpy.ops.gpencil.segment_move` * `bpy.ops.gpencil.segment_remove` You can try this out for yourself with the following file. Uncomment entries in `bad_names` to allow them to be executed by the script. [Grease Pencil.blend](https://archive.blender.org/developer/F12779070/Grease_Pencil.blend) In all cases, I ran the operator without any arguments. Thus, it used the default properties for each operator. A debug/developer build reports null pointer dereferences for all cases, from what I've seen.
Author

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux
Antonio Vazquez self-assigned this 2021-12-28 15:55:25 +01:00

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

This issue was referenced by bd9d09ca82

This issue was referenced by bd9d09ca829994ef30fb29debbb78612bdf9e3bd

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94439
No description provided.