Fix T94439: Some GPencil operators crash when calling from console

This fix avoid the segment fault for several operators.